# lens

./: .gitattributes  ADRS.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EVENT_MODEL.md  GITHUB_ACTIONS_STRATEGY.md  LABEL_STRATEGY.md  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  PERFORMANCE_BUDGET.md  PROXY_ENGINE.md  README.md  RELEASE_STRATEGY.md  SECURITY.md  SECURITY_REVIEW.md  SUPPORT.md  TESTING.md  clippy.toml  create-aura-decentralized-cloud.md  deny.toml
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: config.yml  ideas.yml  questions.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  fuzz.yml  integration.yml  release.yml
crates/lens-cli/: Cargo.toml
crates/lens-core/: Cargo.toml
crates/lens-core/src/: lib.rs
crates/lens-ebpf/: Cargo.toml
crates/lens-platform/: Cargo.toml
crates/lens-plugin/: Cargo.toml
crates/lens-proto-http1/: Cargo.toml
crates/lens-proto-postgres/: Cargo.toml
crates/lens-proto-postgres/src/: lib.rs
crates/lens-protocol/: Cargo.toml
crates/lens-proxy/: Cargo.toml
crates/lens-redact/: Cargo.toml
crates/lens-store/: Cargo.toml
crates/lens-tls/: Cargo.toml
crates/lens-tui/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  quickstart.md  troubleshooting.md
